Altered main loop of terminal

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,8 @@
             "mainClass": "LsPlus",
             "projectName": "TerminalUi_525bfced"
             // ,
-            // "console": "externalTerminal"
+            // "console": "externalTerminal",
+            
         }
     ]
 }
